<resources>
    <string name="app_name">CUM Trésors</string>
    <string name="title_activity_choice_connect">ChoiceConnectActivity</string>
    <string name="you_connect">Se Connecter</string>
    <string name="s_inscrire">S\'inscrire</string>

    <string name="rejoindre_une_partie">Rejoindre une partie</string>
    <string name="cr_er_une_partie">Créer une partie</string>
    <string name="cum_tr_sors">CUM Trésors</string>
    <string name="compte">Compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="confirmer_mot_de_passe">Confirmer Mot de passe</string>
    <string name="adresse_mail">Adresse Mail</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider_inscription">Valider Inscription</string>
    <string name="button">Button</string>
    <string name="param_tres">Paramétres</string>
    <string name="classement">Classement</string>
    <string name="amis">amis</string>
    <string name="connecter">connecter</string>
    <string name="retour">Retour</string>
    <string name="email_pseudo">Email/Pseudo</string>
    <string name="prenom">Prénom</string>
    <string name="parametres">Paramètres</string>
    <string name="infobdd">ajouter info bdd</string>
    <string name="modifier_profile">Modifier profile</string>
    <string name="mode_sourd">Mode sourd</string>
    <string name="mode_aveugle">Mode non-voyant</string>
    <string name="mode_sombre">Mode sombre</string>
    <string name="Instagram">Instagram</string>
    <string name="web">Site web</string>
    <string name="facebook">Facebook</string>
    <string name="rules">Règle du jeu</string>
    <string name="thanks">Remerciements</string>
    <string name="avatar">Avatar</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="validermodif">Valider les Modifications</string>
    <string name="photoprofile">photoprofile</string>
    <string name="jouer"/>
    <string name="ok">Ok</string>
    <string name="code">Code</string>
    <string name="remerciements">Remerciements</string>
    <string name="textremerciements">Merci à :\n
Conception du jeu / progrmmation\n
Valentin Manu\n
Nathan Bernard\n
Ewan Michel\n
Yanis Vangalen\n
Charles Parsy\n
\n
UI design / développement front-end :\n
Yanis Vangalen\n
Charles Parsy\n
\n
Développement backend :\n
Valentin Manu\n
Nathan Bernard\n
Ewan Michel\n
\n
Serveur :\n
Valentin Menu\n
\n
Logiciel :\n
Android studio\n
Git Hub\n
Figma\n
ChatGPT\n
Postgres SQL\n
    </string>
    <string name="supprimer_derni_re_couleur">Supprimer dernière couleur</string>
    <string name="message">message</string>
    <string name="envoie">envoie</string>
    <string name="chat">Chat</string>
    <string name="Regle">En Travaux</string>
    <string name="mode_d_veloppeur">Mode développeur</string>
    <string name="position_x">Position X</string>
    <string name="position_y">Position Y</string>
    <string name="nombre_de_joueurs">Nombre de joueurs</string>
    <string name="retourner_au_menu_principal">Retourner au menu principal</string>
    <string name="bouton_retourner_au_menu_principal">Bouton pour retourner au menu principal</string>
    <string name="score">Score</string>
    <string name="autre_joueur">Autre joueur</string>
</resources>
