<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_param"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BeigeF">

        <ImageButton
            android:id="@+id/backthanks"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/retour"
            android:background="@color/BeigeF"
            android:padding="9dp"
            android:contentDescription="@string/retour"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/madimi_one_regular"
            android:text="@string/remerciements"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/rond_layout_setting"
        android:elevation="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textremerciements"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black50"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

    </ScrollView>

</LinearLayout>