<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.example.Chasse.Activities.MainActivity"
                                                   android:background="@drawable/background_main"
                                                   android:id="@id/layoutMain"
>

    <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/score"
    />

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.853">

        <ImageButton
                android:id="@+id/button_retourn_main_menu"
                android:layout_width="359dp"
                android:layout_height="48dp"
                android:background="@drawable/btn"
                android:contentDescription="@string/bouton_retourner_au_menu_principal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/retourner_au_menu_principal"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/madimi_one_regular"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>