<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ocean">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_alignParentBottom="true">

            <com.example.Chasse.View.MapWithPointsView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/map"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#70FFFFFF" />
        </FrameLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_dev_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn"
            android:contentDescription="@string/mode_d_veloppeur"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textRemoveColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mode_d_veloppeur"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/madimi_one_regular"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/openChat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn"
            android:contentDescription="@string/chat"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chat"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/madimi_one_regular"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <EditText
        android:id="@+id/text_input_x"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/position_x"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="75dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/text_input_y"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/position_y"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="75dp"
        android:layout_marginStart="185dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statut_game"
        android:text="@string/nombre_de_joueurs"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/madimi_one_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>