<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Beige"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/vide"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/rond_layout_setting">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/modifpseudo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/sun"
                android:padding="5sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pseudo"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_toEndOf="@id/modifpseudo"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/modifnom"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/help_param"
                android:padding="5sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="30sp"
                android:text="@string/nom"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_toEndOf="@id/modifnom"
                />

             </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/modifname"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/audio_param"
                android:padding="5sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pr_nom"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_toEndOf="@id/modifname"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <FrameLayout
                android:id="@+id/modifavatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imagemodifavatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/compte_param"
                    android:padding="5sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/avatar"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/arrowmodifavatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"
                    android:layout_gravity="end|center"
                    />


            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/rond_layout_setting">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validermodif"
                android:textSize="30sp"
                android:background="@color/transparent"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>