<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <ImageView
        android:id="@+id/bateau"
        android:layout_width="280dp"
        android:layout_height="248dp"
        android:background="@drawable/bateau"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <TextView
        android:id="@+id/textView"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cum_tr_sors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        android:textStyle="italic"
        android:fontFamily="@font/madimi_one_regular"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853">

        <ImageButton
            android:id="@+id/connect"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/btn"
            android:contentDescription="@string/you_connect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/you_connect"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/madimi_one_regular"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942">

        <ImageButton
            android:id="@+id/registrering"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/btn"
            android:contentDescription="@string/s_inscrire"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/s_inscrire"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/madimi_one_regular"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>